--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,9 @@
+set -s escape-time 10			# faster command sequences
+set -g history-limit 5000		# boost history
+set -g base-index 1				# start windows numbering at 1
+setw -g pane-base-index 1		# make pane numbering consistent with windows
+setw -g automatic-rename on		# rename window to reflect current program
+set -g renumber-windows on		# renumber windows when a window is closed
 unbind C-b 
 set -g prefix C-x 
 if-shell '[ $(uname -s) = Linux ]' \
@@ -8,3 +14,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
