--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -4,8 +4,7 @@ set -g base-index 1				# start windows numbering at 1
 setw -g pane-base-index 1		# make pane numbering consistent with windows
 setw -g automatic-rename on		# rename window to reflect current program
 set -g renumber-windows on		# renumber windows when a window is closed
-if-shell '[ $(uname -s) = Linux ]' \
-    'set -g default-terminal "screen-256color"'
+set-option -ga terminal-overrides ",*256col*:Tc" # true color
 unbind C-b 
 set -g prefix C-x 
 bind v split-window -h -c "#{pane_current_path}"
