update term and copy config

--- a/neoVim/coc-settings.json
+++ b/neoVim/coc-settings.json
@@ -1,6 +1,7 @@
 {
 	"suggest.noselect": true,
 	"inlayHint.enable": false,
+	"clangd.disableSnippetCompletion": true,
 	"suggest.completionItemKindLabels": {
 		"class": "\uf0e8",
 		"color": "\ue22b",
