--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -4,6 +4,7 @@ set -g base-index 1				# start windows numbering at 1
 setw -g pane-base-index 1		# make pane numbering consistent with windows
 setw -g automatic-rename on		# rename window to reflect current program
 set -g renumber-windows on		# renumber windows when a window is closed
+set -g set-clipboard on			# clipboard enable
 set-option -ga terminal-overrides ",*256col*:Tc" # true color
 unbind C-b 
 set -g prefix C-x 
