update some config

--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -7,7 +7,7 @@ set -g renumber-windows on		# renumber windows when a window is closed
 set -g set-clipboard on			# clipboard enable
 set-option -ga terminal-overrides ",*256col*:Tc" # true color
 unbind C-b 
-set -g prefix C-x 
+set -g prefix C-a 
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
@@ -21,10 +21,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'wfxr/tmux-power'
 set -g @tmux_power_theme 'forest'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @tmux_power_prefix_highlight_pos 'R'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
