--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -7,7 +7,7 @@ set -g renumber-windows on		# renumber windows when a window is closed
 set -g set-clipboard on			# clipboard enable
 set-option -ga terminal-overrides ",*256col*:Tc" # true color
 unbind C-b 
-set -g prefix C-a 
+set -g prefix M-w 
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
