--- a/tmux/baseTmux.conf
+++ b/tmux/baseTmux.conf
@@ -4,10 +4,11 @@ set -g base-index 1				# start windows numbering at 1
 setw -g pane-base-index 1		# make pane numbering consistent with windows
 setw -g automatic-rename on		# rename window to reflect current program
 set -g renumber-windows on		# renumber windows when a window is closed
-unbind C-b 
-set -g prefix C-x 
+set -g set-clipboard on			# clipboard enable
 if-shell '[ $(uname -s) = Linux ]' \
     'set -g default-terminal "screen-256color"'
+unbind C-b 
+set -g prefix M-w 
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
