update tmux config and install.sh

--- a/tmux/baseTmux.conf
+++ b/tmux/baseTmux.conf
@@ -9,6 +9,7 @@ if-shell '[ $(uname -s) = Linux ]' \
     'set -g default-terminal "screen-256color"'
 unbind C-b 
 set -g prefix M-w 
+bind-key -n M-e send-prefix
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
