--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -8,6 +8,7 @@ set -g set-clipboard on			# clipboard enable
 set-option -ga terminal-overrides ",*256col*:Tc" # true color
 unbind C-b 
 set -g prefix M-w 
+bind-key -n M-e send-prefix
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 bind h select-pane -L
