update tmux config

--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -6,6 +6,9 @@ setw -g automatic-rename on		# rename window to reflect current program
 set -g renumber-windows on		# renumber windows when a window is closed
 set -g set-clipboard on			# clipboard enable
 set-option -ga terminal-overrides ",*256col*:Tc" # true color
+set-window-option -g mode-keys vi # vim copy mode
+
+# Key binds
 unbind C-b 
 set -g prefix M-w 
 bind-key -n M-e send-prefix
@@ -15,18 +18,24 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-set-window-option -g mode-keys vi
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+# plugin for basic configuration
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# plugin for theme
 set -g @plugin 'wfxr/tmux-power'
 set -g @tmux_power_theme 'forest'
 set -g @tmux_power_prefix_highlight_pos 'R'
+# plugin for prefix highlight
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
 
+# Personal script
+set -g @status_line_trigger on
+bind e run "~/.tmux/tmux-status-line-trigger.tmux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
