--- a/tmux/baseTmux.conf
+++ b/tmux/baseTmux.conf
@@ -5,8 +5,13 @@ setw -g pane-base-index 1		# make pane numbering consistent with windows
 setw -g automatic-rename on		# rename window to reflect current program
 set -g renumber-windows on		# renumber windows when a window is closed
 set -g set-clipboard on			# clipboard enable
-if-shell '[ $(uname -s) = Linux ]' \
-    'set -g default-terminal "screen-256color"'
+set-window-option -g mode-keys vi # vim copy mode
+
+# true color
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Key binds
 unbind C-b 
 set -g prefix M-w 
 bind-key -n M-e send-prefix
@@ -16,5 +21,4 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-set-window-option -g mode-keys vi
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
