--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -5,8 +5,11 @@ setw -g pane-base-index 1		# make pane numbering consistent with windows
 setw -g automatic-rename on		# rename window to reflect current program
 set -g renumber-windows on		# renumber windows when a window is closed
 set -g set-clipboard on			# clipboard enable
-set-option -ga terminal-overrides ",*256col*:Tc" # true color
 set-window-option -g mode-keys vi # vim copy mode
+
+# true color
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Key binds
 unbind C-b 
