--- a/cocVim/coc-settings.json
+++ b/cocVim/coc-settings.json
@@ -1,5 +1,8 @@
 {
 	"suggest.noselect": true,
+	"inlayHint.enable": false,
+	"clangd.disableSnippetCompletion": true,
+	"clangd.fallbackFlags": ["-std=c++17"],
 	"suggest.completionItemKindLabels": {
 		"class": "\uf0e8",
 		"color": "\ue22b",
