--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -8,8 +8,8 @@ set -g set-clipboard on			# clipboard enable
 set-window-option -g mode-keys vi # vim copy mode
 
 # true color
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # Key binds
 unbind C-b 
