--- a/nvim_coc/coc-settings.json
+++ b/nvim_coc/coc-settings.json
@@ -2,7 +2,7 @@
 	"suggest.noselect": true,
 	"inlayHint.enable": false,
 	"clangd.disableSnippetCompletion": true,
-	"clangd.fallbackFlags": ["-std=c++17"],
+	"clangd.fallbackFlags": ["-xc++", "-std=c++17"],
 	"suggest.completionItemKindLabels": {
 		"class": "\uf0e8",
 		"color": "\ue22b",
