--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -17,6 +17,7 @@ set -g prefix M-w
 bind-key -n M-e send-prefix
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
+bind ] setw synchronize-panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
