--- a/nvim_coc/coc-settings.json
+++ b/nvim_coc/coc-settings.json
@@ -5,28 +5,28 @@
 	"suggest.completionItemKindLabels": {
 		"class": "\uf0e8",
 		"color": "\ue22b",
-		"constant": "\uf8fe",
+		"constant": "\udb80\udfff",
 		"default": "\uf29c",
 		"enum": "\uf435",
 		"enumMember": "\uf02b",
-		"event": "\ufacd",
-		"field": "\uf93d",
-		"file": "\uf723",
+		"event": "\udb82\udd55",
+		"field": "\udb81\udc3e",
+		"file": "\udb80\ude24",
 		"folder": "\uf115",
 		"function": "\u0192",
 		"interface": "\uf417",
 		"keyword": "\uf1de",
-		"method": "\uf6a6",
+		"method": "\udb80\udda7",
 		"module": "\uf40d",
-		"operator": "\uf915",
+		"operator": "\udb81\udc16",
 		"property": "\ue624",
-		"reference": "\ufa46",
+		"reference": "\uf079",
 		"snippet": "\ue60b",
 		"struct": "\ufb44",
 		"text": "\ue612",
-		"typeParameter": "\uf728",
+		"typeParameter": "\udb80\ude29",
 		"unit": "\uf475",
-		"value": "\uf89f",
+		"value": "\udb80\udfa0",
 		"variable": "\ue71b"
 	}
 }
