update tmux keymap for respawn window

--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -22,6 +22,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind r respawn-window -k
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # List of plugins
