add telescope plugin and update neovim tmux config

--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -9,7 +9,10 @@ set-window-option -g mode-keys vi # vim copy mode
 
 # true color
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -as terminal-features ",xterm-256color:RGB"
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # Key binds
 unbind C-b 
@@ -23,7 +26,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind r respawn-window -k
+# vim copy mode keybind
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi C-j send -X cursor-down \; send -X cursor-down \; send -X cursor-down \; send -X cursor-down \; send -X cursor-down
+bind -T copy-mode-vi C-k send -X cursor-up \; send -X cursor-up \; send -X cursor-up \; send -X cursor-up \; send -X cursor-up
+bind -T copy-mode-vi C-h send -X cursor-left \; send -X cursor-left \; send -X cursor-left \; send -X cursor-left \; send -X cursor-left
+bind -T copy-mode-vi C-l send -X cursor-right \; send -X cursor-right \; send -X cursor-right \; send -X cursor-right \; send -X cursor-right
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
