--- a/nvim_coc/yazi/keymap.toml
+++ b/nvim_coc/yazi/keymap.toml
@@ -6,6 +6,7 @@ prepend_keymap = [
 	{ on = "!", run = 'shell "$SHELL" --block', desc = "Open shell here" },
 	{ on = "l", run = 'plugin smart-enter', desc = "Enter the child directory, or open the file" },
 	{ on = "T", run = 'plugin max-preview', desc = "Maximize or restore preview" },
+	{ on = [ "g", "s" ], run = 'plugin vcs-files', desc = "Show Git file changes" },
 ]
 
 [input]
