--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -5,7 +5,7 @@ prepend_keymap = [
 	{ on = "<C-j>", run = "arrow 5", desc = "Move cursor down(repeat 5)" },
 	{ on = "!", run = 'shell "$SHELL" --block', desc = "Open shell here" },
 	{ on = "l", run = 'plugin smart-enter', desc = "Enter the child directory, or open the file" },
-	{ on = "T", run = 'plugin max-preview', desc = "Maximize or restore preview" },
+	{ on = "T", run = 'plugin toggle-pane max-preview', desc = "Maximize or restore preview" },
 	{ on = [ "g", "s" ], run = 'plugin vcs-files', desc = "Show Git file changes" },
 ]
 
