update tmux key bind for copy-mode-vi

--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -27,11 +27,14 @@ bind k select-pane -U
 bind l select-pane -R
 bind r respawn-window -k
 # vim copy mode keybind
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi V send-keys -X select-line
+bind -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-bind -T copy-mode-vi C-j send -X cursor-down \; send -X cursor-down \; send -X cursor-down \; send -X cursor-down \; send -X cursor-down
-bind -T copy-mode-vi C-k send -X cursor-up \; send -X cursor-up \; send -X cursor-up \; send -X cursor-up \; send -X cursor-up
-bind -T copy-mode-vi C-h send -X cursor-left \; send -X cursor-left \; send -X cursor-left \; send -X cursor-left \; send -X cursor-left
-bind -T copy-mode-vi C-l send -X cursor-right \; send -X cursor-right \; send -X cursor-right \; send -X cursor-right \; send -X cursor-right
+bind -T copy-mode-vi C-j send-keys -N 5 -X cursor-down
+bind -T copy-mode-vi C-k send-keys -N 5 -X cursor-up
+bind -T copy-mode-vi C-h send-keys -N 5 -X cursor-left
+bind -T copy-mode-vi C-l send-keys -N 5 -X cursor-right
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
