remove nouse xclip in config

--- a/tmux/baseTmux.conf
+++ b/tmux/baseTmux.conf
@@ -9,7 +9,10 @@ set-window-option -g mode-keys vi # vim copy mode
 
 # true color
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -as terminal-features ",xterm-256color:RGB"
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # Key binds
 unbind C-b 
@@ -22,4 +25,13 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind r respawn-window -k
+# vim copy mode keybind
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi V send-keys -X select-line
+bind -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectangle-toggle
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind -T copy-mode-vi C-j send-keys -N 5 -X cursor-down
+bind -T copy-mode-vi C-k send-keys -N 5 -X cursor-up
+bind -T copy-mode-vi C-h send-keys -N 5 -X cursor-left
+bind -T copy-mode-vi C-l send-keys -N 5 -X cursor-right
