--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -30,7 +30,7 @@ bind r respawn-window -k
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi V send-keys -X select-line
 bind -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectangle-toggle
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind -T copy-mode-vi C-j send-keys -N 5 -X cursor-down
 bind -T copy-mode-vi C-k send-keys -N 5 -X cursor-up
 bind -T copy-mode-vi C-h send-keys -N 5 -X cursor-left
