update status line plugin

--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -40,18 +40,8 @@ bind -T copy-mode-vi C-l send-keys -N 5 -X cursor-right
 set -g @plugin 'tmux-plugins/tpm'
 # plugin for basic configuration
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# plugin for theme
-set -g @plugin 'wfxr/tmux-power'
-set -g @tmux_power_theme 'forest'
-set -g @tmux_power_prefix_highlight_pos 'R'
-# plugin for prefix highlight
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_show_sync_mode 'on'
-
-# Personal script
-set -g @status_line_trigger on
-bind e run "~/.tmux/tmux-status-line-trigger.tmux"
+# plugin for status line
+set -g @plugin 'jxm2001/tmux-oasis'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
