--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -1,15 +1,21 @@
-set -s escape-time 10			# faster command sequences
-set -g history-limit 20000		# boost history
-set -g base-index 1				# start windows numbering at 1
-setw -g pane-base-index 1		# make pane numbering consistent with windows
-setw -g automatic-rename on		# rename window to reflect current program
-set -g renumber-windows on		# renumber windows when a window is closed
-set -g set-clipboard on			# clipboard enable
-set-window-option -g mode-keys vi # vim copy mode
+set -s escape-time 0         # faster command sequences
+set -g history-limit 50000   # boost history
+set -g display-time 1000     # longer info display time
+set -g status-interval 1     # faster status line update
+set -g base-index 1          # start windows numbering at 1
+set -g renumber-windows on   # renumber windows when a window is closed
+set -g set-clipboard on      # clipboard enable
+set -g focus-events on       # focus-events enable
+set -g status-position top   # move status line to top
+setw -g pane-base-index 1    # make pane numbering consistent with windows
+setw -g automatic-rename on  # rename window to reflect current program
+setw -g mode-keys vi         # vim copy mode
+setw -g aggressive-resize on # aggressive-resize enable
 
 # true color
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",xterm-256color:RGB"
+# enable passthrough
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
@@ -17,6 +23,7 @@ set -ga update-environment TERM_PROGRAM
 # Key binds
 unbind C-b 
 set -g prefix M-w 
+bind-key M-w send-prefix
 bind-key -n M-e send-prefix
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
@@ -26,6 +33,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind r respawn-window -k
+bind-key R run-shell " \
+	tmux source-file $HOME/.tmux.conf > /dev/null; \
+	tmux display-message 'Sourced $HOME/.tmux.conf !'"
 # vim copy mode keybind
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi V send-keys -X select-line
@@ -38,10 +48,10 @@ bind -T copy-mode-vi C-l send-keys -N 5 -X cursor-right
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-# plugin for basic configuration
-set -g @plugin 'tmux-plugins/tmux-sensible'
 # plugin for status line
-set -g @plugin 'jxm2001/tmux-oasis'
+set -g @plugin 'uhs-robert/tmux-oasis'
+# plugin for xdg-open
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
