--- a/tmux/baseTmux.conf
+++ b/tmux/baseTmux.conf
@@ -33,7 +33,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind r respawn-window -k
-bind-key R run-shell " \
+bind-key c-r run-shell " \
 	tmux source-file $HOME/.tmux.conf > /dev/null; \
 	tmux display-message 'Sourced $HOME/.tmux.conf !'"
 # vim copy mode keybind
