--- a/tmux/normalTmux.conf
+++ b/tmux/normalTmux.conf
@@ -33,7 +33,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind r respawn-window -k
-bind-key R run-shell " \
+bind-key c-r run-shell " \
 	tmux source-file $HOME/.tmux.conf > /dev/null; \
 	tmux display-message 'Sourced $HOME/.tmux.conf !'"
 # vim copy mode keybind
@@ -50,8 +50,12 @@ bind -T copy-mode-vi C-l send-keys -N 5 -X cursor-right
 set -g @plugin 'tmux-plugins/tpm'
 # plugin for status line
 set -g @plugin 'uhs-robert/tmux-oasis'
-# plugin for xdg-open
-set -g @plugin 'tmux-plugins/tmux-open'
+# plugin for open links
+set -g @plugin 'alberti42/tmux-fzf-links'
+set-option -g @fzf-links-key C-p
+set-option -g @fzf-links-editor-open-cmd \
+	"tmux if-shell -F '#{pane_in_mode}' 'send-keys -X cancel' '' \; \
+	send-keys 'vim +%line \"%file\"' C-m"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
